fix avatars and tags on mobile

--- a/cevo-hugo/static/css/post.css
+++ b/cevo-hugo/static/css/post.css
@@ -130,6 +130,12 @@
 					text-transform: uppercase;
 				}
 
+				@media screen and (max-width: 980px) {
+					.post > footer .stats li {
+						display: block;
+					}
+				}
+
 					.post > footer .stats li:first-child {
 						border-left: 0;
 						margin-left: 0;
@@ -207,7 +213,7 @@
 						}
 
 							.post > header .meta .author .name {
-								margin: 0 0 0 1.5em;
+								margin: 0 1em 0 0;
 							}
 
 							.post > header .meta .author img {
